--- a/app/views/contributions/new.html.erb
+++ b/app/views/contributions/new.html.erb
@@ -1,3 +1,5 @@
+<%= render partial: "layouts/header" %>
+
 <section class="new-edit">
   <h1 class="new-edit__title">投稿フォーム</h1>
   <div class="new-edit__form">
