--- a/app/views/contributions/index.html.erb
+++ b/app/views/contributions/index.html.erb
@@ -1,3 +1,5 @@
+<%= render partial: "layouts/header" %>
+
 <section class="index">
   <div class="index-field">
     <% @contributions.each do |contribution| %>
