--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,5 @@
+<%= render partial: "layouts/header" %>
+
 <section class="user">
   <section class="user-show">
     <div class="user-show__title">
