--- a/app/assets/stylesheets/modules/header.scss
+++ b/app/assets/stylesheets/modules/header.scss
@@ -8,8 +8,10 @@
     text-align: center;
     position: relative;
     &__title {
+      color: black;
       font-size: 22px;
       font-weight: 700;
+      text-decoration: none;
     }
     &__icon {
       font-size: 22px;
@@ -21,6 +23,7 @@
   }
   &__nav {
     width: auto;
+    margin: 0 0 20px;
     background-color: #eee;
     &__block {
       display: flex;
@@ -34,5 +37,8 @@
         }
       }
     }
+  }
+  .hide {
+    display: none;
   }
 }
