--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,11 @@
 <section class="header">
   <div class="header__contents">
-    <h1 class="header__contents__title">DaiGo Blog</h1>
+    <h1><%= link_to "DaiGo Blog", contributions_path, class: :"header__contents__title" %></h1>
     <i class="fas fa-align-justify header__contents__icon"></i>
   </div>
-  <div class="header__nav">
+  <div class="header__nav hide">
     <ul class="header__nav__block">
-      <% if user_signed_in? current_user.id == @user.id %>
+      <% if user_signed_in? %>
         <%= link_to "/users/#{current_user.id}", class: :"header__nav__block__link" do %>
           <li>マイページ</li>
         <% end %>
