--- a/app/views/contributions/show.html.erb
+++ b/app/views/contributions/show.html.erb
@@ -47,15 +47,24 @@
 
   <section class="show-comment">
     <div class="show-comment__form">
-      <%= form_with(model: [@contribution, Comment.new], local: true, class:"show-comment__form__with", method: :put) do |form| %>
+      <%= form_with(model: [@contribution, Comment.new], local: true, class:"show-comment__form__with", method: :post) do |form| %>
         <%= form.text_area :text %>
         <%= form.submit "コメントする", id: :"comment-btn" %>
       <% end %>
     </div>
     <div class="show-comment__index">
-      <% 19.times do %>
-        <h1 class="comment">yoooo!!</h1>
-      <% end %>
+      <h1 class="show-comment__index__title">＜コメント一覧＞</h1>
+      <div class="show-comment__index__box">
+        <% if @contribution.comments %>
+          <% @contribution.comments.each do |comment| %>
+            <div class="show-comment__index__box__description">
+              <p class="show-comment__index__box__description__name"><%= comment.user.nickname %></p>
+              <p class="show-comment__index__box__description__date"><%= comment.created_at %></p>
+              <p class="show-comment__index__box__description__text"><%= comment.text %></p>
+            </div>
+          <% end %>
+        <% end %>
+      </div>
     </div>
   </section>
 </div>
