--- a/app/assets/stylesheets/modules/show.scss
+++ b/app/assets/stylesheets/modules/show.scss
@@ -174,6 +174,25 @@
         background-color: white;
         overflow: scroll;
         margin: 15px 0 0;
+        &__description {
+          margin: 5px 10px;
+          border-bottom: 1px #f5f5f5 solid;
+          &__name {
+            font-size: 16px;
+            font-weight: 600;
+            color:rgb(252, 90, 117);
+            .comment-date {
+              color: #333;
+              font-size: 14px;
+              font-weight: 500;
+              margin: 0 0 0 20px;
+            }
+          }
+          &__text {
+            font-size: 16px;
+            margin: 0 0 5px;
+          }
+        }
       }
     }
   }
