--- a/app/views/contributions/show.html.erb
+++ b/app/views/contributions/show.html.erb
@@ -58,8 +58,10 @@
         <% if @contribution.comments %>
           <% @contribution.comments.each do |comment| %>
             <div class="show-comment__index__box__description">
-              <p class="show-comment__index__box__description__name"><%= comment.user.nickname %></p>
-              <p class="show-comment__index__box__description__date"><%= comment.created_at %></p>
+              <p class="show-comment__index__box__description__name">
+                <%= comment.user.nickname %>
+                <span class="comment-date"><%= comment.created_at.strftime('%Y/%m/%d %H:%M') %></span>
+              </p>
               <p class="show-comment__index__box__description__text"><%= comment.text %></p>
             </div>
           <% end %>
