--- a/app/views/contributions/show.html.erb
+++ b/app/views/contributions/show.html.erb
@@ -47,8 +47,8 @@
 
   <section class="show-comment">
     <div class="show-comment__form">
-      <%= form_with(model: [@contribution, Comment.new], local: true, class:"show-comment__form__with", method: :post) do |form| %>
-        <%= form.text_area :text %>
+      <%= form_with(model: [@contribution, Comment.new], local: true, class: :"show-comment__form__with") do |form| %>
+        <%= form.text_area :text, class: :"comment-box" %>
         <%= form.submit "コメントする", id: :"comment-btn" %>
       <% end %>
     </div>
