--- a/app/assets/stylesheets/modules/show.scss
+++ b/app/assets/stylesheets/modules/show.scss
@@ -197,3 +197,49 @@
     }
   }
 }
+
+@media screen and ( max-width:479px ) {
+  .show {
+    .show-detail {
+      height: auto;
+      width: 70%;
+      margin: 0 auto 20px;
+      background-color: white;
+      border: solid 1px rgb(252, 90, 117);
+      border-radius: 5px;
+      &__box {
+        color: rgb(252, 90, 117);
+        font-size: 16px;
+        margin: 10px;
+        justify-content: space-between;
+        &__left {
+          margin: auto 0;
+          &__name {
+            color: rgb(252, 90, 117);
+            text-decoration: none;
+          }
+          &__name:hover {
+            color: red;
+          }
+          &__create-date {
+            font-size: 12px;
+            color: rgb(252, 90, 117);
+            text-decoration: none;
+          }
+        }
+        &__right {
+          margin: auto 0;
+          &__like {
+            font-size: 16px;
+            color: rgb(252, 90, 117);
+            text-decoration: none;
+          }
+          &__like:hover {
+            color: red;
+            font-weight: 700;
+          }
+        }
+      }
+    }
+  }
+}
