--- a/app/assets/stylesheets/modules/index.scss
+++ b/app/assets/stylesheets/modules/index.scss
@@ -53,9 +53,7 @@
             border: orange  1px solid;
             border-radius: 15px;
             padding: 0 10px;
-          }
-          &__list:first-child {
-            margin-right: 10px;
+            margin: 0 0 0 10px;
           }
         }
       }
