--- a/app/views/likes/destroy.js.erb
+++ b/app/views/likes/destroy.js.erb
@@ -1,1 +1,1 @@
-$('#likes_buttons_<%= @contribution.id%>').html("<%= j(render partial: 'likes/like', locals: {contribution: @contribution}) %>");
+$('.show-detail__box__right__like').html("<%= j(render partial: 'likes/like', locals: {contribution: @contribution, likes: @likes}) %>");
