--- a/app/views/contributions/index.html.erb
+++ b/app/views/contributions/index.html.erb
@@ -12,7 +12,7 @@
             <% if current_user != contribution.user %>
               <li class="index-review__list"><%= contribution.user.nickname %></li>
             <% end %>
-            <li class="index-review__list"><i class="far fa-heart"></i>：<%= contribution.likes.count %></li>
+            <li class="index-review__list"><i class="far fa-heart"></i>：<%= contribution.likes_count %></li>
             <li class="index-review__list">コメント：<%= contribution.comments.count %></li>
           </ul>
         </div>
