--- a/app/views/contributions/_form.html.erb
+++ b/app/views/contributions/_form.html.erb
@@ -5,7 +5,7 @@
     </label>
     <%= form.text_field :title, placeholder: "title" %>
   </div>
-  <div class="contribution-form__field">
+  <div class="contribution-form__field file-preview">
     <label>
       Image <br>
       <i class="fas fa-camera-retro picture-icon"></i>
