--- a/app/assets/stylesheets/modules/new-edit.scss
+++ b/app/assets/stylesheets/modules/new-edit.scss
@@ -34,6 +34,18 @@
           border: 2px #998bfa solid;
           border-radius: 5px;
         }
+        #contribution_public_id {
+          font-size: 18px;
+          height: 30px;
+          width: auto;
+          color: #333;
+          margin-top: 10px;
+        }
+        #contribution_public_id:hover {
+          font-weight: 500;
+          border: 2px #998bfa solid;
+          border-radius: 5px;
+        }
         #contribution_title {
           font-size: 20px;
           height: 30px;
@@ -41,6 +53,7 @@
           margin-top: 10px;
         }
         #contribution_title:hover {
+          font-weight: 500;
           border: 2px #998bfa solid;
           border-radius: 5px;
         }
@@ -55,6 +68,7 @@
           margin-top: 10px;
         }
         #contribution_text:hover {
+          font-weight: 500;
           border: 2px #998bfa solid;
           border-radius: 5px;
         }
