--- a/app/views/contributions/index.html.erb
+++ b/app/views/contributions/index.html.erb
@@ -3,19 +3,21 @@
 <section class="index">
   <div class="index-field">
     <% @contributions.each do |contribution| %>
-      <%= link_to "/contributions/#{contribution.id}", class: :"index-field__box" do %>
-        <div class="index-field__box__image" style="background-image: url(<%= contribution.image %>);">
-          <div class="index-title">
-            <h1 class="index-title__text"><%= contribution.title %></h1>
+      <% if contribution.public_id != 2 %>
+        <%= link_to "/contributions/#{contribution.id}", class: :"index-field__box" do %>
+          <div class="index-field__box__image" style="background-image: url(<%= contribution.image %>);">
+            <div class="index-title">
+              <h1 class="index-title__text"><%= contribution.title %></h1>
+            </div>
+            <ul class="index-review">
+              <% if current_user != contribution.user %>
+                <li class="index-review__list"><%= contribution.user.nickname %></li>
+              <% end %>
+              <li class="index-review__list"><i class="far fa-heart"></i>：<%= contribution.likes_count %></li>
+              <li class="index-review__list">コメント：<%= contribution.comments.count %></li>
+            </ul>
           </div>
-          <ul class="index-review">
-            <% if current_user != contribution.user %>
-              <li class="index-review__list"><%= contribution.user.nickname %></li>
-            <% end %>
-            <li class="index-review__list"><i class="far fa-heart"></i>：<%= contribution.likes_count %></li>
-            <li class="index-review__list">コメント：<%= contribution.comments.count %></li>
-          </ul>
-        </div>
+        <% end %>
       <% end %>
     <%end%>
     <%= paginate(@contributions) %>
