--- a/app/views/users/_user-profile.html.erb
+++ b/app/views/users/_user-profile.html.erb
@@ -1,4 +1,4 @@
-<% if current_user.id == @user.id %>
+<% if current_user == @user %>
   <div class="profile-edit">
     <%= form_with(model: @user, local: true, class: :"profile-edit__form") do |form| %>
       <div class="profile-edit__form__field">
