--- a/app/views/contributions/top_page.html.erb
+++ b/app/views/contributions/top_page.html.erb
@@ -5,7 +5,9 @@
       このサイトはメンタリストであるDaiGoさんの発言を元に『自分の知識の定着』を目的としたWebサイトになります。<br>
       本来、知識の定着にはアウトプット時に人間の感情が籠っているとその質は高くなるそうです。<br>
       しかし、知識を定着させたい時にアウトプットできる人が周囲にいない場合や、共有できない理由があるかもしれません。<br>
-      私も小学校低学年から20歳ころまで消防官という夢がありましたが、周囲に発信しませんでした。<br>
+      サイトに取り入れたプログラミングスキルについては、TECK EXPERTの共同制作で<br>
+      自身が担当せず、また初見の知識を選択し取り入れております。<br>
+      知識の向上が目的でなくても楽しめるように、趣味やブログも投稿していただくことができるサイトになっております。<br>
       何かに努力する人の、アウトプットの場となり、知識の宝庫と感じ取ってもらうことができるページになればと思います。
     </p>
     <ul class="welcome__link">
