--- a/app/assets/stylesheets/mixins/mixin.scss
+++ b/app/assets/stylesheets/mixins/mixin.scss
@@ -1,12 +1,27 @@
 @mixin display {
   height: 100vh;
   width: 100%;
+  background-color: white;
 }
 
 @mixin user-form {
   height: 20px;
   width: 30%;
   padding: 5px;
+}
+
+@mixin signup-btn {
+  height: 30px;
+  width: 30%;
+  margin: 15px 0 0;
+  background-color: white;
+  border: solid black 1px;
+  border-radius: 5px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: all .5s;
+  transition: all .5s;
 }
 
 @keyframes bg-slider {
