--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,8 +1,7 @@
 .user {
-  width: 100%;
-  height: 100%;
-  background-color: #f5f5f5;
-  padding: 20px 0 20px;
+  @include display;
+  padding: 20px 0 0px;
+  overflow: scroll;
   .user-show {
     text-align: center;
     &__title {
