--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,13 +1,11 @@
 .user {
   @include display;
-  padding: 20px 0 0px;
-  overflow: scroll;
   .user-show {
     text-align: center;
     &__title {
       font-size: 24px;
       font-weight: 700;
-      margin-bottom: 15px;
+      margin: 10px 0 15px;
     }
     .profile-edit {
       &__form {
@@ -30,15 +28,16 @@
           border-radius: 5px;
           color: white;
           border: white dashed 2px;
-          background-color: rgb(59, 207, 59);
+          background-color: rgb(253, 177, 36);
           margin: 25px auto;
           display: block;
-          box-shadow: 0 0 0 2px rgb(59, 207, 59);
+          box-shadow: 0 0 0 1px rgb(253, 177, 36);
           transition:all .3s ease;
         }
         #user-btn:hover {
+          font-size: 18px;
           border-style: solid;
-          box-shadow: 0 0 0 3px rgb(59, 207, 59);
+          box-shadow: 0 0 0 3px rgb(253, 177, 36);
         }
       }
     }
