--- a/app/assets/stylesheets/mixins/mixin.scss
+++ b/app/assets/stylesheets/mixins/mixin.scss
@@ -1,7 +1,8 @@
 @mixin display {
-  height: 100vh;
+  height: calc(100vh - 60px);
   width: 100%;
   background-color: white;
+  overflow: scroll;
 }
 
 @mixin user-form {
