--- a/app/assets/stylesheets/modules/new-edit.scss
+++ b/app/assets/stylesheets/modules/new-edit.scss
@@ -4,7 +4,7 @@
   &__title {
     font-size: 24px;
     font-weight: 700;
-    padding: 20px 0;
+    margin: 20px 0 0;
   }
   &__form {
     .contribution-form {
