--- a/app/assets/stylesheets/modules/show.scss
+++ b/app/assets/stylesheets/modules/show.scss
@@ -1,12 +1,10 @@
 .show {
   @include display;
-  padding: 20px 0;
-  overflow: scroll;
   .show-contribution {
     height: 300px;
     width: 70%;
     min-width: 50%;
-    margin: 0 auto 20px;
+    margin: 20px auto;
     background-size: contain;
     background-position: center;
     border: solid 1px rgb(238, 185, 185);
@@ -172,7 +170,7 @@
         width: 100%;
         background-color: white;
         overflow: scroll;
-        margin: 15px 0 0;
+        margin: 15px 0;
         &__description {
           margin: 5px 10px;
           border-bottom: 1px #f5f5f5 solid;
