--- a/app/assets/stylesheets/modules/show.scss
+++ b/app/assets/stylesheets/modules/show.scss
@@ -3,16 +3,15 @@
   .show-contribution {
     height: 300px;
     width: 70%;
-    min-width: 50%;
     margin: 20px auto;
     background-size: contain;
     background-position: center;
     border: solid 1px rgb(238, 185, 185);
-    border-radius: 5px;
     overflow: scroll;
+    border-radius: 5px;
     cursor: pointer;
     &__box {
-      background-color: rgba(255,255,255,0.8);
+      background-color: rgba(255,255,255,0.9);
       &__title {
         font-size: 24px;
         font-weight: 700;
@@ -20,7 +19,7 @@
         padding: 10px 0 0;
       }
       &__text {
-        padding: 0 10px 10px;
+        padding: 0 0 10px;
       }
     }
     .none {
