--- a/app/views/contributions/index.html.erb
+++ b/app/views/contributions/index.html.erb
@@ -4,7 +4,7 @@
   <div class="index-field">
     <% @contributions.each do |contribution| %>
       <% if contribution.public_id != 2 %>
-        <%= link_to "/contributions/#{contribution.id}", class: :"index-field__box" do %>
+        <%= link_to contribution_path(id: contribution.id), class: :"index-field__box" do %>
           <div class="index-field__box__image" style="background-image: url(<%= contribution.image %>);">
             <div class="index-title">
               <h1 class="index-title__text"><%= contribution.title %></h1>
