--- a/app/views/contributions/search.html.erb
+++ b/app/views/contributions/search.html.erb
@@ -1,1 +1,48 @@
 <%= render partial: "layouts/header" %>
+
+<section class="search">
+  <%= search_form_for @q, class: :"search__form" do |form| %>
+    <div class="search__form__field">
+      <%= form.label :genre_id, "ジャンル" %><br>
+        <label>
+          <%= form.radio_button :genre_id_eq, "", {checked: :true} %>指定なし
+        </label>
+        <label>
+          <%= form.radio_button :genre_id_eq, 1 %>知識
+        </label>
+        <label>
+          <%= form.radio_button :genre_id_eq, 2 %>ブログ
+        </label>
+        <label>
+          <%= form.radio_button :genre_id_eq, 3 %>趣味
+        </label>
+    </div>
+
+    <div class="search__form__field">
+      <label>
+        タイトル <br>
+        <%= form.search_field :title_cont %>
+      </label>
+    </div>
+
+    <div class="search__form__field">
+      <label>
+        いいね数 <br>
+        <%= form.number_field :likes_count_gteq %> ~
+        <%= form.number_field :likes_count_lt %>
+      </label>
+    </div>
+
+    <div class="search__form__field">
+      <label>
+        投稿日時 <br>
+        <%= form.date_field :created_at_gteq %> ~
+        <%= form.date_field :created_at_lt %>
+      </label>
+    </div>
+
+    <div class="search__form__field">
+      <%= form.submit "検索する", id: :"search-btn" %>
+    </div>
+  <% end %>
+</section>
