--- a/app/views/contributions/search.html.erb
+++ b/app/views/contributions/search.html.erb
@@ -1,48 +1,59 @@
 <%= render partial: "layouts/header" %>
 
-<section class="search">
-  <%= search_form_for @q, class: :"search__form" do |form| %>
-    <div class="search__form__field">
-      <%= form.label :genre_id, "ジャンル" %><br>
-        <label>
-          <%= form.radio_button :genre_id_eq, "", {checked: :true} %>指定なし
-        </label>
-        <label>
-          <%= form.radio_button :genre_id_eq, 1 %>知識
-        </label>
-        <label>
-          <%= form.radio_button :genre_id_eq, 2 %>ブログ
-        </label>
-        <label>
-          <%= form.radio_button :genre_id_eq, 3 %>趣味
-        </label>
-    </div>
+<div class="search-result">
+  <section class="search">
+    <h1 class="search__title">検索画面</h1>
+    <%= search_form_for @q, url: search_contributions_path, action: :search, class: :"search__form", remote: true do |form| %>
+      <div class="search__form__field">
+        <%= form.label :genre_id, "ジャンル" %><br>
+          <label>
+            <%= form.radio_button :genre_id_eq, "", {checked: :true} %>指定なし
+          </label>
+          <label>
+            <%= form.radio_button :genre_id_eq, 1 %>知識
+          </label>
+          <label>
+            <%= form.radio_button :genre_id_eq, 2 %>ブログ
+          </label>
+          <label>
+            <%= form.radio_button :genre_id_eq, 3 %>趣味
+          </label>
+      </div>
 
-    <div class="search__form__field">
-      <label>
-        タイトル <br>
-        <%= form.search_field :title_cont %>
-      </label>
-    </div>
+      <div class="search__form__field">
+        <label>
+          タイトル <br>
+          <%= form.search_field :title_cont %>
+        </label>
+      </div>
 
-    <div class="search__form__field">
-      <label>
-        いいね数 <br>
-        <%= form.number_field :likes_count_gteq %> ~
-        <%= form.number_field :likes_count_lt %>
-      </label>
-    </div>
+      <div class="search__form__field">
+        <label>
+          いいね数 <br>
+          <%= form.number_field :likes_count_gteq %> ~
+          <%= form.number_field :likes_count_lt %>
+        </label>
+      </div>
 
-    <div class="search__form__field">
-      <label>
-        投稿日時 <br>
-        <%= form.date_field :created_at_gteq %> ~
-        <%= form.date_field :created_at_lt %>
-      </label>
-    </div>
+      <div class="search__form__field">
+        <label>
+          投稿日時 <br>
+          <%= form.date_field :created_at_gteq %> ~
+          <%= form.date_field :created_at_lt %>
+        </label>
+      </div>
 
-    <div class="search__form__field">
-      <%= form.submit "検索する", id: :"search-btn" %>
+      <div class="search__form__field">
+        <%= form.submit "検索する", id: :"search-btn" %>
+      </div>
+    <% end %>
+  </section>
+
+  <section class="index">
+    <div class="index-field">
+      <%= render partial: "contributions/result" %>
+      <%= paginate(@result_contributions) %>
     </div>
-  <% end %>
-</section>
+  </section>
+
+</div>
