--- a/app/views/contributions/search.js.erb
+++ b/app/views/contributions/search.js.erb
@@ -1,1 +1,1 @@
-$('index-field__box').html("<%= j(render partial: 'contributions/result', local: {contribution: @result_contributions}) %>"); 
+$('.index').html("<%= j(render partial: 'contributions/result', local: {contribution: @result_contributions}) %>"); 
