--- a/app/assets/stylesheets/modules/search.scss
+++ b/app/assets/stylesheets/modules/search.scss
@@ -4,8 +4,61 @@
     &__title {
       font-size: 24px;
       font-weight: 700;
-      text-align: center;
       margin: 20px 0 0;
+      text-align: center;
+    }
+    #contribution_search {
+      margin: 20px 0;
+      .search-field {
+        font-size: 18px;
+        text-align: center;
+        &__segment {
+          margin: 0 0 10px;
+        }
+        label {
+          margin: 0 10px;
+          span {
+            margin: 0 0 0 5px;
+          }
+        }
+        input #q_title_cont {
+          @include user-form;
+        }
+        #q_likes_count_gteq, #q_likes_count_lt{
+          height: auto;
+          width: 40px;
+          padding: 0 0 0 5px;
+        }
+        #q_created_at_gteq, #q_created_at_lt{
+          height: auto;
+          width: 170px;
+          padding: 0 0 0 10px;
+          margin: 0 0 20px;
+        }
+        #search-btn {
+          display: block;
+          line-height: 30px;
+          width: 100px;
+          font-size: 18px;
+          margin: 10px auto 5px;
+          color: white;
+          background-color: rgb(31, 255, 31);
+          border: 2px solid rgb(31, 255, 143);
+          -webkit-box-sizing: border-box;
+          -moz-box-sizing: border-box;
+          box-sizing: border-box;
+          -webkit-transition: all .5s;
+          transition: all .5s;
+          
+        }
+        #search-btn:hover {
+          cursor: pointer;
+          border-radius: 5px;
+          background-color: transparent;
+          border: 2px solid rgb(31, 255, 143);
+          color: rgb(31, 255, 143);
+        }
+      }
     }
   }
 }
