--- a/app/assets/stylesheets/modules/header.scss
+++ b/app/assets/stylesheets/modules/header.scss
@@ -36,3 +36,45 @@
     }
   }
 }
+
+@media screen and ( max-width:479px ) {
+  .header {
+    height: 40px;
+    line-height: 40px;
+    width: 100vw;
+    color: white;
+    background: image-url("header.png");
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 0;
+    top: 0;
+    z-index: 10;
+    &__contents {
+      margin-left: 15px;
+      text-align: center;
+      &__title {
+        color: white;
+        font-size: 20px;
+        font-weight: 700;
+        text-decoration: none;
+      }
+    }
+    &__nav {
+      width: auto;
+      &__block {
+        display: flex;
+        &__link {
+          font-size: 12px;
+          color: white;
+          text-decoration: none;
+          li {
+            margin: 0 10px;
+          }
+          li:last-child {
+            margin: 0 15px 0 0;
+          }
+        }
+      }
+    }
+  }
+}
