--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
   <div class="header__contents">
     <h1><%= link_to "DaiGo Blog", contributions_path, class: :"header__contents__title" %></h1>
   </div>
-  <div class="header__nav hide">
+  <div class="header__nav">
     <ul class="header__nav__block">
       <% if user_signed_in? %>
         <%= link_to user_path(id: current_user.id), class: :"header__nav__block__link" do %>
