--- a/app/assets/stylesheets/modules/header.scss
+++ b/app/assets/stylesheets/modules/header.scss
@@ -1,14 +1,5 @@
 .header {
-  height: 40px;
-  line-height: 40px;
-  width: 100vw;
-  color: white;
-  background: image-url("header.png");
-  display: flex;
-  justify-content: space-between;
-  padding: 10px 0;
-  top: 0;
-  z-index: 10;
+  @include header-css;
   &__contents {
     margin-left: 30px;
     text-align: center;
@@ -37,18 +28,41 @@
   }
 }
 
+@media screen and ( max-width:580px ) {
+  .header {
+    @include header-css;
+    &__contents {
+      margin-left: 10px;
+      text-align: center;
+      &__title {
+        color: white;
+        font-size: 22px;
+        font-weight: 700;
+        text-decoration: none;
+      }
+    }
+    &__nav {
+      width: auto;
+      &__block {
+        display: flex;
+        &__link {
+          font-size: 14px;
+          color: white;
+          text-decoration: none;
+          li {
+            margin: 0 10px;
+          }
+          li:last-child {
+            margin: 0 10px 0 0;
+          }
+        }
+      }
+    }
+  }
+}
 @media screen and ( max-width:479px ) {
   .header {
-    height: 40px;
-    line-height: 40px;
-    width: 100vw;
-    color: white;
-    background: image-url("header.png");
-    display: flex;
-    justify-content: space-between;
-    padding: 10px 0;
-    top: 0;
-    z-index: 10;
+    @include header-css;
     &__contents {
       margin-left: 15px;
       text-align: center;
